src/objects/Survey__c.object
<CustomObject>
    <description>AstrumCRM - An object to keep track of the site survey events (Pictometry, Field, Electrical, and Structural) that occur on Properties.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>&apos;pete&apos;</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aerial_Photo_Vendor__c</fullName>
        <description>Which Vendor Provided the Aerial Photo Survey</description>
        <inlineHelpText>Which Vendor Provided the Aerial Photo Survey?</inlineHelpText>
        <label>Aerial Photo Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Aurora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pictometry</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Surveyor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Surveyor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tree_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tree Removal</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Survey-{0}</displayFormat>
        <label>Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <recordTypes>
        <fullName>Aerial_Photo_Survey</fullName>
        <active>true</active>
        <description>Aerial Photography and Remote Measurement</description>
        <label>Aerial Photo Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Electrical_Survey</fullName>
        <active>true</active>
        <description>Survey of the Electrical System</description>
        <label>Electrical Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Field_Survey</fullName>
        <active>true</active>
        <description>Survey Completed in Person By an Astrum Surveyor</description>
        <label>Field Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Structural_Survey</fullName>
        <active>true</active>
        <description>Survey of the Structural Members, Conditions, Etc</description>
        <label>Structural Survey</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>